--- a/build.gradle
+++ b/build.gradle
@@ -11,16 +11,20 @@ buildscript {
 }
 
 apply plugin: 'org.sonarqube'
-apply plugin: 'jacoco'
 
-subprojects {
+def allTestCoverageFile = "$buildDir/jacoco/allTestCoverage.exec"
+allprojects {
     apply plugin: 'java-library'
     apply plugin: 'io.franzbecker.gradle-lombok'
-
+    apply plugin: 'jacoco'
 
     lombok {
         version = '1.18.4'
         sha256 = ""
+    }
+
+    jacoco {
+        toolVersion = "0.8.2"
     }
 
     // build fails for java 11, let's wait for a newer lombok version
@@ -33,7 +37,6 @@ subprojects {
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.0'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.0'
         testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.11.1'
-        testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.23.0'
     }
 
     repositories {
@@ -45,14 +48,30 @@ subprojects {
             showStandardStreams = true
         }
 
+        useJUnitPlatform()
         systemProperty 'java.util.logging.config.file', 'src/test/resources/logging.properties'
     }
+
+    sonarqube {
+        properties {
+            property "sonar.projectName", "Dedupe"
+            property "sonar.projectKey", "bakdata-dedupe"
+            property "sonar.jacoco.reportPaths", allTestCoverageFile
+        }
+    }
+
+    jacocoTestReport.dependsOn(test)
 }
 
-sonarqube {
-    properties {
-        property "sonar.host.url", "https://sonarcloud.io"
-        property "sonar.projectName", "Dedupe"
-        property "sonar.projectKey", "bakdata-dedupe"
-    }
+//jacocoTestReport{
+//    executionData = project.fileTree(dir: '.', include:'**/build/jacoco/*.exec')
+//    classDirectories = project.fileTree(dir: '.', include:'**/build/classes/main/**/*', excludes: [])
+//    sourceDirectories = project.fileTree(dir: '.', include:'**/src/main/java/**/*')
+//}
+
+task jacocoMerge(type: JacocoMerge) {
+    dependsOn subprojects.jacocoTestReport
+
+    destinationFile = file(allTestCoverageFile)
+    executionData = project.fileTree(dir: '.', include:'**/build/jacoco/test.exec')
 }
