--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,16 +12,20 @@ variables:
   - group: sonarqube
   - group: sign
   - group: ossrh
+  - group: changelog
 
 resources:
   repositories:
     - repository: templates
       type: github
       name: bakdata/bakdata-project-templates
+      ref: tmp/upload-snapshot
       endpoint: bot
 
 jobs:
   - template: azure/gradle/build.yml@templates
+    parameters:
+      jdkVersion: '1.17'
   - template: azure/gradle/create_tag_version.yml@templates
   - template: azure/gradle/upload_release.yml@templates
   - template: azure/gradle/upload_snapshot.yml@templates
